# robosoccer_world_model

./: README.md  package.xml  setup.cfg  setup.py  world_model_node.py
world_model/: world_model_node.py
