<package format="3">
  <name>world_model</name>
  <version>0.0.1</version>
  <description>World model node for RoboSoccer</description>
  <maintainer email="uwrobosoccer@gmail.com">UWRS</maintainer>
  <license>MIT</license>
  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
